# sc-reforged

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  functions.txt  object_structure.md  temp.rs  test.pcx
docs/: key_to_pose.md  orders.md  sequences.md  terrain.md  window_list.md
docs/windows/: main_menu.md
renderer/: Cargo.toml
renderer-macros/: Cargo.toml
renderer-macros/src/: lib.rs
renderer/src/: bind_groups.rs  buffers.rs  lib.rs  pipelines.rs  shaders.rs  vertex_layouts.rs
src/: main.rs
src/engine/: arena.rs  assets.rs  bind_group.rs  buffers.rs  context.rs  depth_buffer.rs  dirty.rs  egui_integration.rs  gizmos.rs  gizmos.wgsl  global.rs  growing_buffer.rs  input.rs  mesh.rs  mip_maps.rs  mod.rs  renderer.rs  scene.rs  shader_cache.rs  shaders.rs  state.rs  storage.rs  tracked.rs  transform.rs  uniform_buffer.rs  utils.rs  vfs.rs
src/engine/assets/: mod.rs  resources.rs  texture.rs
src/engine/renderer/: frame.rs  gpu.rs  mip_maps.rs  mip_maps.wgsl  mipmaps.rs  mipmaps.wgsl  mod.rs  render.rs  render_context.rs  surface.rs
src/engine/threads/: main.rs  mod.rs
src/engine/ui/: context.rs  geometry.rs  image_widget.rs  layout.rs  mod.rs  panel_widget.rs  render.rs  root_widget.rs  style.rs  widget.rs
src/game/: campaigns.rs  config.rs  game_state.rs  globals.rs  mod.rs  smf.rs  world_layer.rs
src/game/assets/: asset.rs  asset_factory.rs  asset_source.rs  image.rs  images.rs  mod.rs  model.rs  models.rs  motion.rs  motions.rs  sprites.rs
src/game/assets/config/: campaign_def.rs  mod.rs
src/game/common/: animation.rs  animations.rs  asset.rs  asset_loader.rs  asset_reader.rs  assets.rs  camera.rs  camera.wgsl  compositor.rs  compositor.wgsl  data_dir.rs  file_system.rs  fullscreen.wgsl  geometry_buffers.rs  geometry_buffers.wgsl  hash.rs  height_map.rs  image.rs  image_packer.rs  interpolate.rs  math.rs  mesh.wgsl  mesh_renderer.rs  mod.rs  model.rs  model.wgsl  model_renderer.rs  model_renderer.wgsl  models.rs  quad_tree.rs  render.rs  shadows.rs  shadows.wgsl  skeleton.rs  sky.wgsl  sky_renderer.rs  static_meshes.rs  storage.rs  text_file.rs  track.rs  (+1 more)
src/game/common/animations/: animation.rs  mod.rs  sequence.rs  sequencer.rs  sequences.rs  track.rs
src/game/common/assets/: data_dir.rs  mod.rs  text_file.rs
src/game/common/physics/: mod.rs
src/game/common/renderer/: animation.wgsl  instance.rs  math.wgsl  mod.rs  model_renderer.rs  model_renderer.wgsl  model_renderer_shadows.wgsl  render_animations.rs  render_instance.rs  render_models.rs  render_textures.rs  textures.rs
src/game/config/: campaign.rs  campaign_defs.rs  campaigns.rs  character_profiles.rs  config_file.rs  configs.rs  help_window_defs.rs  image_defs.rs  images.rs  mod.rs  model_lods.rs  motion_sequencer_defs.rs  mtf.rs  object_templates.rs  parser.rs  terrain.rs  terrain_mapping.rs  window_base.rs  windows.rs
src/game/render/: compositor.rs  geometry_buffer.rs  mod.rs  per_frame.rs  textures.rs  uniform_buffer.rs
src/game/render/world/: camera_render_pipeline.rs  gizmo_render_pipeline.rs  mod.rs  model_render_pipeline.rs  render_bindings.rs  render_layouts.rs  render_models.rs  render_pipeline.rs  terrain_render_pipeline.rs  world_render_snapshot.rs  world_renderer.rs
src/game/render/world/shaders/: geometry_buffer.wgsl  models.wgsl
src/game/scenes/: loading.rs  loading.wgsl  mod.rs
src/game/scenes/loading/: mod.rs
src/game/scenes/main_menu/: mod.rs  quad_renderer.rs  render.rs  sprite_renderer.rs  window.wgsl  window_renderer.rs
src/game/scenes/main_menu/ecs/: geometry.rs  mod.rs
src/game/scenes/model_viewer/: mod.rs  model_viewer.wgsl
src/game/scenes/select_campaign/: mod.rs
src/game/scenes/ui_test/: mod.rs
src/game/scenes/world/: actions.rs  bounding_boxes.rs  bounding_boxes.wgsl  camera.rs  entities.rs  environment.wgsl  fog.rs  fog.wgsl  frustum.wgsl  game_mode.rs  height_map.rs  mod.rs  model.rs  model.wgsl  models.rs  new_height_map.rs  new_objects.rs  new_terrain.rs  object.rs  objects.rs  orders.rs  overlay.wgsl  overlay_renderer.rs  process_chunks.wgsl  quad_tree.rs  render_model.rs  render_store.rs  render_world.rs  resources.rs  sequencer.rs  sim_world.rs  strata.rs  strata.wgsl  systems.rs  terrain.rs  terrain.wgsl  terrain_data.wgsl  terrain_renderer.rs  terrain_renderer.wgsl  terrain_wireframe.wgsl  (+4 more)
src/game/scenes/world/animation/: animation.rs  mod.rs  motion.rs  pose.rs
src/game/scenes/world/ecs/: gizmos.rs  mod.rs  storage.rs  transform.rs
src/game/scenes/world/extract/: camera.rs  environment.rs  mod.rs  (+5 more)
src/game/sim/: day_night_cycle.rs  ecs.rs  free_camera_controller.rs  mod.rs  spawner.rs  top_down_camera_controller.rs  ui.rs
src/game/sim/extract/: camera.rs  environment.rs  gizmos.rs  mod.rs  models.rs  terrain.rs  ui.rs
src/game/sim/orders/: order_request.rs  orders_controller.rs
src/game/sim/sequences/: motion_controller.rs  motion_sequencer.rs
src/game/sim/systems/: camera.rs  changed.rs  clear_render_targets.rs  debug.rs  gizmos.rs  mod.rs  orders.rs  sequences.rs  world_interaction.rs
src/game/ui/: geometries.rs  mod.rs  rect.rs
src/game/ui/render/: mod.rs  present.wgsl  quad_renderer.rs  ui_mesh_renderer.rs  window.wgsl  window_renderer.rs
src/game/ui/widgets/: list_box.rs  main_menu_button.rs  mod.rs  text_button.rs  widget.rs
src/game/ui/windows/: actions.rs  bottombar.rs  geometries.rs  help.rs  main_menu.rs  mod.rs  window.rs  window_manager.rs  window_manager_context.rs  world.rs
src/game/windows/: help_window.rs  mod.rs  quad_renderer.rs  window.wgsl  window_renderer.rs
src/game/windows/ecs/: button.rs  geometry.rs  mod.rs  rect.rs  render.rs  ui_action.rs  widgets.rs  window.rs
(+104 files in other folders)
