[package]
name = "sc-reforged"
version = "0.1.0"
edition = "2024"

[features]
default = ["egui"]
egui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]

[dependencies]
shadow_company_tools = { git = "https://github.com/tiaanl/shadow_company_tools.git" }

# Graphics
egui = { version = "0.31", optional = true, default-features = false, features = ["default_fonts"] }
egui-wgpu = { version = "0.31", optional = true, default-features = false }
egui-winit = { version = "0.31", optional = true, default-features = false }
wgpu = { version = "24.0", features = ["naga-ir"] }
winit = { version = "0.30" }

ahash = "0.8"
bevy_ecs = "0.17"
bytemuck = { version = "1.18", default-features = false, features = ["derive"] }
byteorder = { version = "1.5", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
glam = { version = "0.30", default-features = false, features = ["bytemuck", "std"] }
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg"] }
naga_oil = { version = "0.17", default-features = false }
pathdiff = "0.2"
pcx = { version = "0.2", default-features = false }
pollster = { version = "0.4", default-features = false }
slab = "0.4"
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["release_max_level_info", "max_level_debug"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
walkdir = { version = "2.5", default-features = false }
zune-jpeg = { version = "=0.5.5" }

[build-dependencies]
naga_oil = { version = "0.17" }
naga = { version = "24.0" }

[profile.dev.package.zune-jpeg]
opt-level = 3
