[workspace]
members = ["renderer", "renderer-macros"]

[workspace.dependencies]
generational-arena = "0.2"
glam = { version = "0.30", features = ["bytemuck"] }
renderer = { path = "renderer" }
renderer-macros = { path = "renderer-macros" }
wgpu = "24.0"

[package]
name = "sc-reforged"
version = "0.1.0"
edition = "2024"

[features]
default = ["egui"]
egui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]

[dependencies]
shadow_company_tools = { git = "https://github.com/tiaanl/shadow_company_tools.git" }

# Graphics
egui = { version = "0.31", optional = true, default-features = false, features = ["default_fonts"] }
egui-wgpu = { version = "0.31", optional = true, default-features = false }
egui-winit = { version = "0.31", optional = true, default-features = false }
wgpu.workspace = true
winit = "0.30"

renderer.workspace = true
renderer-macros.workspace = true

ahash = "0.8"
bytemuck = { version = "1.18", default-features = false, features = ["derive"] }
byteorder = { version = "1.5", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
generational-arena.workspace = true
glam.workspace = true
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg"] }
naga_oil = { version = "0.17", default-features = false }
pathdiff = "0.2"
pcx = { version = "0.2", default-features = false }
pollster = { version = "0.4", default-features = false }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["release_max_level_info", "max_level_debug"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
walkdir = { version = "2.5", default-features = false }
zune-jpeg = { version = "=0.5.5" }
bitflags = "2.10"
bevy_ecs = { version = "0.17", default-features = false, features = ["std", "backtrace", "detailed_trace"] }

[build-dependencies]
heck = "0.5.0"
naga = { version = "24.0" }
naga_oil = { version = "0.17" }
prettyplease = "0.2"
quote = "1"
syn = "2.0.114"

[profile.dev.package.zune-jpeg]
opt-level = 3
